# AI_ResearchAssistant_for_students-developers

./: .env.example  .gitignore  README.md  auth.db  pyproject.toml  requirements.txt  vercel.json
auth_service/: .gitignore  run.py
auth_service/app/: __init__.py  config.py  extensions.py
auth_service/app/models/: __init__.py  user.py
auth_service/app/routes/: __init__.py  auth_routes.py  google_routes.py  phone_routes.py  protected_routes.py
auth_service/app/services/: __init__.py  auth_service.py  validators.py
auth_service/app/templates/: auth.html
auth_service/app/utils/: __init__.py  jwt_utils.py  password_utils.py  response_helpers.py
auth_service/tests/: test_auth.py  test_google_phone.py
backend/: app.py  config.py  history_store.py  orchestrator.py
backend/agents/: __init__.py  analysis_agent.py  base_agent.py  delivery_agent.py  manager_agent.py  research_agent.py  writer_agent.py
backend/tests/: test_agent_fallbacks.py  test_email_tool.py  test_history_store.py  test_intent_queries.py  test_research_agent.py  test_web_search.py
backend/tools/: email_tool.py  web_search.py
frontend/: index.html  script.js  style.css
